--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -8557,11 +8557,52 @@ zoom-slider
 .zoom-slider__control_next {
   right: 60px;
 }
-#video-gallery{
-  margin-top: 2em;
-}
+
 @media only screen and (max-height: 600px) {
   .full-screen-block__footer {
     display: none;
   }
 }
+
+#video-gallery{
+  margin-top: 2em;
+}
+.form-top{
+  margin-top: 30px;
+}
+.panel{
+  box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
+  border-radius: 6px;
+    border: 0;
+}
+@-moz-document url-prefix() {
+    .form-control{
+      height: auto;
+    }
+}
+.panel-primary{
+  background-color: #2c3e50;
+  color: #fff;
+}
+.panel-primary>.panel-heading {
+    color: #fff;
+    font-size: 20px;
+    background-color: #2c3e50;
+    border-color: #2c3e50;
+}
+.btn-warning{
+  background-color: transparent;
+  border-color: #bdc3c7;
+}
+
+.f-left{
+  float: left;
+}
+html,body {
+  overflow-x: hidden;
+}
+
+.fff{
+  margin-top: 1em;
+}
+
