--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -8578,7 +8578,6 @@ zoom-slider
 @-moz-document url-prefix() {
     .form-control{
       height: auto;
-      width: auto;
     }
 }
 .panel-primary{
@@ -8607,8 +8606,7 @@ html,body {
   margin-top: 1em;
 }
 
-@media only screen and (max-width: 768px) {
-  #connect{
-    width: 100%;
-  }
+.cccc{
+  margin-left: auto;
+  margin-right: auto;
 }
